--- a/4/less/custom-less.less
+++ b/4/less/custom-less.less
@@ -1,10 +1,124 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Aug 22, 2016, 11:27:43 PM
-    Author     : peter_000
-*/
+body {
+    font-family: Roboto,Arial,sans-serif;
+    color: #494d55;
+    font-size: 14px;
+    background: #f5f5f5;
+}
+p{
+    line-height: 1.5;
+}
+a{
+    -webkit-transition: all .4s ease-in-out;
+}
+a, a:hover, a:focus{
+    text-decoration: none;
+    outline: none;
+}
+.available-course{
+    margin-bottom: 30px;
 
+    h2 {
+        background: #5ab66e;
+        padding: 15px;
+        color: #fff;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+        border-top-left-radius: 4px;
+        -moz-background-clip: padding;
+        background-clip: padding-box;
+        margin-bottom: 0;
+        font-size: 18px;
+        text-align: center;
+    }
+    .coursebox {
+        background: #fff;
+        border-radius: 0;
+        -moz-background-clip: padding;
+        background-clip: padding-box;
+        padding: 15px;
+        border: 1px solid #eee;
+        border-bottom: none;
+        margin-bottom: 0;
+
+        .course-name{
+            font-size: 18px;
+            font-family: Roboto,Arial,sans-serif;
+            margin: 5px;
+            line-height: 1;
+            padding: 0;
+            float: left;
+
+
+            a{
+                padding-bottom: 3px;
+                background-position: left 2px;
+                display: block;
+                padding-left: 21px;
+                background-image: url(../img/course.svg);
+                background-repeat: no-repeat;
+                color: #5ab66e;
+                -webkit-transition: all .4s ease-in-out;
+            }
+            a:hover{
+                color: #3C864D !important;
+            }
+        }
+        .enrolmenticons {
+            float: right;
+            padding: 3px 0;
+            img{
+                margin: 0 .2em;
+            }
+        }
+
+        .content{
+            padding-bottom: 1px;
+            overflow: auto;
+            padding-left: 27px;
+            color: #6c727e;
+            width: auto;
+            float: none;
+            clear: both;
+            p{
+                margin: 10px 0;
+            }
+            span{
+                line-height: normal;
+                border-radius: 0;
+                text-shadow: none;
+            }
+            .btn-primary {
+                background: #5ab66e;
+                color: #fff;
+                padding: 10px 16px;
+                border: none;
+                font-weight: 700;
+                text-shadow: none;
+                -webkit-transition: all .4s ease-in-out;
+            }
+            .btn-primary:hover {
+                background: #449956 !important;
+            }
+            i{
+                margin-right: 5px;
+            }
+        }
+    }
+    .coursebox:last-child {
+        border-bottom: 1px solid #eee;
+        margin-bottom: 30px;
+    }
+}
+@font-face{
+    font-family: Roboto;
+    src:url('../fonts/Roboto-Regular.ttf') format ('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face{
+    font-family: Arial;
+    src:url('../fonts/arial.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
